--- a/index.html
+++ b/index.html
@@ -146,11 +146,12 @@
             <table class="table">
                 <tbody>
                   <tr>
-                    <td>Política de devoluciones</td>
-                    <td>Servicio del vendedor</td>
+                    <td class="bold-600 txt-align">Política de devoluciones</td>
+                    <td >Si el producto que recibes es muy distinto de su descripción o de mala calidad, el vendedor se compromete a aceptar su devolución antes de que el pedido finalice (es decir, antes de hacer clic en "Confirmar el pedido" o mientras que no exceda el plazo de confirmación), y a devolverte íntegramente el dinero. Los gastos de envío para la devolución corren a tu cargo. Puedes optar por quedarte el producto y acordar la devolución del dinero directamente con el vendedor.
+                    </td> 
                   </tr>
                   <tr>
-                    <td>Si el producto que recibes es muy distinto de su descripción o de mala calidad, el vendedor se compromete a aceptar su devolución antes de que el pedido finalice (es decir, antes de hacer clic en "Confirmar el pedido" o mientras que no exceda el plazo de confirmación), y a devolverte íntegramente el dinero. Los gastos de envío para la devolución corren a tu cargo. Puedes optar por quedarte el producto y acordar la devolución del dinero directamente con el vendedor.</td>
+                    <td class="bold-600 txt-align">Servicio del vendedor</td>
                     <td>Entrega Puntual Si no recibes tu compra en 60 días, puedes solicitar la devolución íntegra del importe antes de que el pedido finalice (es decir, antes de hacer clic en «Confirmar el pedido» o mientras no se exceda el plazo de confirmación).</td>
                   </tr>
                 </tbody>
